# TinyTorch_Orillas

./: =2.3.0  profile.json  progress.json  pyproject.toml  requirements.txt
Note/: Dataloader.md  Layer.md  Question_and_answer.ipynb  Transformer.md  class中函数的命名方式.md  milestones1.md
assignments/source/01_setup/: 01_setup.ipynb  set_up.py
book/: command-reference.md
book/chapters/: 01-setup.md
dev/: .buildinfo  community.html  credits.html  datasets.html  faq.html  genindex.html  getting-started.html  intro.html  objects.inv  prerequisites.html  resources.html  search.html  searchindex.js
dev/_sources/: intro.md
dev/chapters/: 00-introduction.html  learning-journey.html  milestones.html
dev/tiers/: architecture.html  foundation.html  olympics.html  optimization.html
dev/tito/: data.html  milestones.html  modules.html  overview.html  troubleshooting.html
milestones/01_perceptron_1957/: forward_pass.py  perceptron_trained.py
milestones/02_xor_crisis_1969/: xor_crisis.py  xor_solved.py
tests/01_tensor/: test_progressive_integration.py  test_tensor_core.py  test_tensor_integration.py
tests/02_activations/: test_tensor_activations_integration.py
tests/03_layers/: test_progressive_integration.py
tests/checkpoints/: checkpoint_00_environment.py  checkpoint_01_foundation.py  checkpoint_02_intelligence.py  checkpoint_03_components.py
tinytorch/: _modidx.py
tinytorch/core/: activations.py  autograd.py  layers.py  tensor.py  training.py
tito/commands/: checkpoint.py  login.py  setup.py  test.py
tito/core/: auth.py  browser.py
(+20 files in other folders)
