[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name="tinytorch"
version = "0.0.1"
description = "🚧 TinyTorch: Educational Deep Learning Framework (Coming Soon)"
readme = "README_placeholder.md"
requires-python=">=3.8"
authors = [
    {name = "Vijay Janapa Reddi", email = "vj@eecs.harvard.edu"}
]
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
dependencies = [
    "pip>=25.0.1",
    "rpm>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/VJ/TinyTorch"
Repository = "https://github.com/VJ/TinyTorch"
Issues = "https://github.com/VJ/TinyTorch/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tinytorch_placeholder*"]

[tool.setuptools.package-dir]
tinytorch = "tinytorch_placeholder"
